added netflix intro with audio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
                     <option value="">Hindi</option>
                 </select>        
             </div>
-            <a href="/login" class="button">Sign in</a>
+            <a href="/frontend/login.html" class="button">Sign in</a>
         </div>
     </header>
     <div class="splash">
@@ -34,7 +34,7 @@
                 <h1>The biggest Indian hits. The best Indian stories. All streaming here.</h1>
                 <h2>Watch anywhere. Cancel anytime.</h2>
                 <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
-                <form action="">
+                <form action="intro.html">
                     <div>
                         <input type="email" name="" id="">
                         <span>Email address</span>
