--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,11 +9,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <nav>
-  <a href="#"><img src="https://tinyurl.com/netflixsvglogo" alt="logo"></a>
+  <a href="index.html"><img src="https://tinyurl.com/netflixsvglogo" alt="logo"></a>
 </nav>
 <div class="form-wrapper">
   <h2>Sign In</h2>
-  <form action="#">
+  <form action="intro.html">
     <div class="form-control">
       <input type="text" required>
       <label>Email or phone number</label>
