--- a/frontend/home.html
+++ b/frontend/home.html
@@ -22,7 +22,7 @@
                 <source src="/frontend/movies/trailer.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <audio autoplay>
+            <audio autoplay loop>
                 <source src="/frontend/movies/trailer.mp3" type="audio/mpeg">
                 Your browser does not support the audio tag.
             </audio>
